[package]
name = "famiq"
version = "0.2.6"
edition = "2021"
authors = ["Kimhong Muong <muongkimhong086@gmail.com>"]
description = "Simplify UI Development in Bevy Engine"
license = "MIT"
repository = "https://github.com/MuongKimhong/famiq"
homepage = "https://github.com/MuongKimhong/famiq"
documentation = "https://docs.rs/famiq"
keywords = ["bevy", "gui", "rust", "json", "ui"]

[dependencies]
bevy = {version="0.15.2", features=["jpeg", "png"]}
serde = "1.0.215"
serde_json = "1.0.133"
smol_str = "0.2.2"
thiserror = "2.0.3"
accesskit = "0.17"

[lib]
name = "famiq"
path = "src/lib.rs"
