[package]
name = "famiq"
version = "0.3.0"
edition = "2024"
authors = ["Kim Muong <muongkimhong086@gmail.com>"]
description = "Experimental GUI library, powered by Bevy engine."
license = "MIT"
repository = "https://github.com/MuongKimhong/famiq"
homepage = "https://github.com/MuongKimhong/famiq"
documentation = "https://docs.rs/famiq"
keywords = ["bevy", "gui", "rust", "json", "ui"]

[dependencies]
bevy = {version="0.16", features=["jpeg", "png", "std", "webgl2"]}
cosmic-text = "0.13.2"
serde = "1.0.219"
serde_json = { version = "1.0.140", features = ["std"]}
smol_str = "0.2.2"
thiserror = "2.0.3"
accesskit = "0.17"
regex = "1.11.1"
syn = "2.0.100"
famiq_macros = { path="../famiq_macros" }
once_cell = "1.21.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3.4.1"

[lib]
name = "famiq"
path = "src/lib.rs"
