[package]
name = "famiq_macros"
version = "0.1.0"
edition = "2024"
authors = ["Kim Muong <muongkimhong086@gmail.com>"]
description = "pro-macro for famiq"
license = "MIT"
repository = "https://github.com/MuongKimhong/famiq"
homepage = "https://github.com/MuongKimhong/famiq"

[lib]
name = "famiq_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = "2.0.100"
quote = "1.0.40"
proc-macro2 = "1.0.95"
darling = "0.20.11"
